Залил страницу Сервисы 2, правки в Главной странице

--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
 
             <div class="services-list">
                 <div class="services-list__item">
-                    <h3 class="services-list__item-title">Дизайн</h3>
+                    <div class="wrapper-item-top">
+                        <h3 class="services-list__item-title">Дизайн</h3>
+                        <img class="service-list__item-img" src="images/service-icon.png">
+                    </div>
                     <ul class="services-sub">
                         <li class="services-sub__item">
                             <a href="#" class="services-sub__item-link">Логотип</a>
@@ -101,7 +104,10 @@
                     <a href="#" class="services-list__item-link">Подробнее</a>
                 </div>
                 <div class="services-list__item">
-                    <h3 class="services-list__item-title">Сайты</h3>
+                    <div class="wrapper-item-top">
+                        <h3 class="services-list__item-title">Сайты</h3>
+                        <img class="service-list__item-img" src="images/service-icon-2.png">
+                    </div>
                     <ul class="services-sub">
                         <li class="services-sub__item">
                             <a href="#" class="services-sub__item-link">Landing-page</a>
@@ -119,7 +125,10 @@
                     <a href="#" class="services-list__item-link">Подробнее</a>
                 </div>
                 <div class="services-list__item">
-                    <h3 class="services-list__item-title">Продвижение</h3>
+                    <div class="wrapper-item-top">
+                        <h3 class="services-list__item-title">Продвижение</h3>
+                        <img class="service-list__item-img" src="images/service-icon-3.png">
+                    </div>
                     <ul class="services-sub">
                         <li class="services-sub__item">
                             <a href="#" class="services-sub__item-link">SEO</a>
@@ -140,7 +149,10 @@
                     <a href="#" class="services-list__item-link">Подробнее</a>
                 </div>
                 <div class="services-list__item">
-                    <h3 class="services-list__item-title">Траблшутинг</h3>
+                    <div class="wrapper-item-top">
+                        <h3 class="services-list__item-title">Траблшутинг</h3>
+                        <img class="service-list__item-img" src="images/service-icon-4.png">
+                    </div>
                     <ul class="services-sub">
                         <li class="services-sub__item">
                             <a href="#" class="services-sub__item-link">Анализ бизнес-процессов, совершенствование и внедрение</a>
@@ -155,7 +167,10 @@
                     <a href="#" class="services-list__item-link">Подробнее</a>
                 </div>
                 <div class="services-list__item">
-                    <h3 class="services-list__item-title">Автоматизация</h3>
+                    <div class="wrapper-item-top">
+                        <h3 class="services-list__item-title">Автоматизаци</h3>
+                        <img class="service-list__item-img" src="images/service-icon-5.png">
+                    </div>
                     <ul class="services-sub">
                         <li class="services-sub__item">
                             <a href="#" class="services-sub__item-link">amoCRM</a>
@@ -176,7 +191,10 @@
                     <a href="#" class="services-list__item-link">Подробнее</a>
                 </div>
                 <div class="services-list__item">
-                    <h3 class="services-list__item-title">Поддержка</h3>
+                    <div class="wrapper-item-top">
+                        <h3 class="services-list__item-title">Поддержка</h3>
+                        <img class="service-list__item-img" src="images/service-icon-6.png">
+                    </div>
                     <ul class="services-sub">
                         <li class="services-sub__item">
                             <a href="#" class="services-sub__item-link">Бесперебойная работы сайта</a>
@@ -190,7 +208,7 @@
                     </ul>
                     <a href="#" class="services-list__item-link">Подробнее</a>
                 </div>
-            </div>
+            </div>>
             
         </div>
     </section>
