обновлена секция about service

--- a/branding_services.html
+++ b/branding_services.html
@@ -43,7 +43,7 @@
                 <div class="wrapper">
                     <div class="service">
                         <div class="wrapper-services">
-                            <span class="services-name">Брендинг</span>
+                            <span class="services-items-title">Брендинг</span>
                             <span class="service-slogan">Имидж и отличительная черта вашего бизнеса</span>
                         </div>
                         <img  class="service-smal-img" src="images/branding-smal-img.png">
@@ -51,21 +51,21 @@
                     </div>
                     <div class="wrapper-right">
                         <ul class="services-lists">
-                            <li class="services-name services-items"><a href="#" class="services-list-link"> Упаковка</a></li>
-                            <li class="services-name services-items"><a href="#" class="services-list-link">Логотип</a></li>
-                            <li class="services-name services-items"><a href="#" class="services-list-link">Рекламный креатив</a</li>
-                            <li class="services-name services-items "><a href="#" class="services-list-link">Ui / Ux дизайн</a></li>
+                            <li class="services-items"><a href="#" class="services-name">Упаковка</a></li>
+                            <li class="services-items"><a href="#" class="services-name">Логотип</a></li>
+                            <li class="services-items"><a href="#" class="services-name">Рекламный креатив</a</li>
+                            <li class="services-items "><a href="#" class="services-name">Ui / Ux дизайн</a></li>
                         </ul>
                         <div class="sml-info-service">
                                 <div class="sml-info-service-text">
                                     <div class="wrapper-sml-info-service">
                                         <span class="sml-info-service-title">Брендинг</span>
                                         <span class="sml-info-service-slogan">Имидж и отличительная черта вашего бизнеса</span>
-                                        <div class="sml-info-service-we-top">Мы знаем как сделать ваш бренд популярным</div>
+                                        <div class="sml-info-service-we-top ">Мы знаем как сделать ваш бренд популярным</div>
                                     </div>
                                     <button class="cost">Узнать стоимость</button>
                                 </div>
-                                <img src="images/branding-big-img.png">
+                                <img class="service-big-img" src="images/branding-big-img.png">
                         </div>
                     </div>
                 </div>
