--- a/service-advertising.html
+++ b/service-advertising.html
@@ -43,26 +43,26 @@
             <div class="wrapper">
                 <div class="service service-advertising">
                     <div class="wrapper-services">
-                        <span class="services-name">Рекламный креатив</span>
+                        <span class="services-items-title services-advertising-items-title">Рекламный креатив</span>
                     </div>
-                    <button class="btn-more-service btn-service-advertising">Подробнее</button>
+                    <button class="btn-more-service btn-more-service-advertising">Подробнее</button>
                 </div>
                 <div class="wrapper-right">
                     <ul class="services-lists">
-                        <li class="services-name services-items"><a href="#" class="services-list-link">Брендинг</a></li>
-                        <li class="services-name services-items"><a href="#" class="services-list-link">Логотип</a></li>
-                        <li class="services-name services-items"><a href="#" class="services-list-link">Рекламный креатив</a</li>
-                        <li class="services-name services-items "><a href="#" class="services-list-link">Ui / Ux дизайн</a></li>
+                        <li class="services-items"><a href="#" class="services-name">Брендинг</a></li>
+                        <li class="services-items"><a href="#" class="services-name">Логотип</a></li>
+                        <li class="services-items"><a href="#" class="services-name">UI/UX design</a</li>
+                        <li class="services-items "><a href="#" class="services-name">Упаковка</a></li>
                     </ul>
                     <div class="sml-info-service">
                             <div class="sml-info-service-text">
                                 <div class="wrapper-sml-info-service">
                                     <span class="sml-info-service-title">Рекламный креатив</span>
-                                    <div class="sml-info-service-we-top service-logo-we-top">Покупатель не сможет остаться равнодушным.</div>
+                                    <div class="sml-info-service-we-top sml-info-service-advertising-we-top">Покупатель не сможет остаться равнодушным.</div>
                                 </div>
                                 <button class="cost">Узнать стоимость</button>
                             </div>
-                            <img class="service-logo-big-img" src="images/service-advertising-big-img.png">
+                            <img class="service-big-img" src="images/service-advertising-big-img.png">
                     </div>
                 </div>
             </div>
