--- a/service-logo.html
+++ b/service-logo.html
@@ -43,7 +43,7 @@
             <div class="wrapper">
                 <div class="service">
                     <div class="wrapper-services">
-                        <span class="services-name">Логотип</span>
+                        <span class="services-items-title">Логотип</span>
                         <span class="service-slogan">Ваш фирменый знак</span>
                     </div>
                     <img  class="service-smal-img" src="images/service-logo-small-img.png">
@@ -51,17 +51,17 @@
                 </div>
                 <div class="wrapper-right">
                     <ul class="services-lists">
-                        <li class="services-name services-items"><a href="#" class="services-list-link">Упаковка</a></li>
-                        <li class="services-name services-items"><a href="#" class="services-list-link">Брендинг</a></li>
-                        <li class="services-name services-items"><a href="#" class="services-list-link">Рекламный креатив</a</li>
-                        <li class="services-name services-items "><a href="#" class="services-list-link">Ui / Ux дизайн</a></li>
+                        <li class="services-items"><a href="#" class="services-name">Упаковка</a></li>
+                        <li class="services-items"><a href="#" class="services-name">Брендинг</a></li>
+                        <li class="services-items"><a href="#" class="services-name">Рекламный креатив</a</li>
+                        <li class="services-items "><a href="#" class="services-name">Ui / Ux дизайн</a></li>
                     </ul>
                     <div class="sml-info-service">
                             <div class="sml-info-service-text">
                                 <div class="wrapper-sml-info-service">
                                     <span class="sml-info-service-title">Логотип</span>
                                     <span class="sml-info-service-slogan">Ваш фирменый знак</span>
-                                    <div class="sml-info-service-we-top service-logo-we-top">Один из самых важных элементов в формировании бренда.</div>
+                                    <div class="sml-info-service-we-top sml-info-service-logo-we-top">Один из самых важных элементов в формировании бренда.</div>
                                 </div>
                                 <button class="cost">Узнать стоимость</button>
                             </div>
