--- a/service-pack.html
+++ b/service-pack.html
@@ -43,7 +43,7 @@
             <div class="wrapper">
                 <div class="service">
                     <div class="wrapper-services">
-                        <span class="services-name">Упаковка</span>
+                        <span class="services-items-title">Упаковка</span>
                         <span class="service-slogan">Конкурентное преимуществовашего продукта</span>
                     </div>
                     <img  class="service-smal-img" src="images/service-pack-small-img.png">
@@ -51,21 +51,21 @@
                 </div>
                 <div class="wrapper-right">
                     <ul class="services-lists">
-                        <li class="services-name services-items"><a href="#" class="services-list-link">Брендинг</a></li>
-                        <li class="services-name services-items"><a href="#" class="services-list-link">Логотип</a></li>
-                        <li class="services-name services-items"><a href="#" class="services-list-link">Рекламный креатив</a</li>
-                        <li class="services-name services-items "><a href="#" class="services-list-link">Ui / Ux дизайн</a></li>
+                        <li class="services-items"><a href="#" class="services-name">Брендинг</a></li>
+                        <li class="services-items"><a href="#" class="services-name">Логотип</a></li>
+                        <li class="services-items"><a href="#" class="services-name">Рекламный креатив</a</li>
+                        <li class="services-items "><a href="#" class="services-name">Ui / Ux дизайн</a></li>
                     </ul>
                     <div class="sml-info-service">
                             <div class="sml-info-service-text">
                                 <div class="wrapper-sml-info-service">
-                                    <span class="sml-info-service-title">Упаковка</span>
+                                    <span class="sml-info-service-title sml-info-service-pack-title">Упаковка</span>
                                     <span class="sml-info-service-slogan">Конкурентное преимущество вашего продукта</span>
-                                    <div class="sml-info-service-we-top service-logo-we-top">Покупатель не сможет остаться равнодушным.</div>
+                                    <div class="sml-info-service-we-top sml-info-service-pack-we-top ">Покупатель не сможет остаться равнодушным.</div>
                                 </div>
                                 <button class="cost">Узнать стоимость</button>
                             </div>
-                            <img class="service-logo-big-img service-pack-big-img" src="images/service-pack-big-img.png">
+                            <img class="service-big-img service-pack-big-img" src="images/service-pack-big-img.png">
                     </div>
                 </div>
             </div>
