--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
     <div class="container container-blog">
         <h3 class="blog-title">Блог</h3>
         <ul class="blog-list">
-            <li class="blog-item"><a class="blog-link">Логотип</a></li>
+            <li  class="blog-item"><a class="blog-link">Логотип</a></li>
             <li class="blog-item"><a class="blog-link">Брендинг </a></li>
             <li class="blog-item"><a class="blog-link">Упаковка</a></li>
             <li class="blog-item"><a class="blog-link">Рекламный креатив</a></li>
@@ -71,9 +71,9 @@
                             провести анализ обратной связи от пользователей отработать негативные отзывы 
                     </span>
                     <div class="info-patel-top-bottom">
-                        <div class="teg teg-1">SEO</div>
-                        <div class="teg teg-2">ЕГЭ</div>
-                        <div class="views">1208</div>
+                        <a href="#" class="teg teg-1">SEO</a>
+                        <a href="#" class="teg teg-2">ЕГЭ</a>
+                        <a href="#" class="views">1208</a>
                     </div>
                 </div>
             </div>
@@ -87,9 +87,9 @@
                             провести анализ обратной связи от пользователей отработать негативные отзывы 
                     </span>
                     <div class="info-patel-top-bottom">
-                        <div class="teg teg-1">SEO</div>
-                        <div class="teg teg-2">ЕГЭ</div>
-                        <div class="views">1208</div>
+                        <a href="#" class="teg teg-1">SEO</a>
+                        <a href="#" class="teg teg-2">ЕГЭ</a>
+                        <a href="#" class="views">1208</a>
                     </div>
                 </div>
             </div>
@@ -103,9 +103,9 @@
                             провести анализ обратной связи от пользователей отработать негативные отзывы 
                     </span>
                     <div class="info-patel-top-bottom">
-                        <div class="teg teg-1">SEO</div>
-                        <div class="teg teg-2">ЕГЭ</div>
-                        <div class="views">1208</div>
+                        <a href="#" class="teg teg-1">SEO</a>
+                        <a href="#" class="teg teg-2">ЕГЭ</a>
+                        <a href="#" class="views">1208</a>
                     </div>
                 </div>
             </div>
@@ -119,9 +119,9 @@
                             провести анализ обратной связи от пользователей отработать негативные отзывы 
                     </span>
                     <div class="info-patel-top-bottom">
-                        <div class="teg teg-1">SEO</div>
-                        <div class="teg teg-2">ЕГЭ</div>
-                        <div class="views">1208</div>
+                        <a href="#" class="teg teg-1">SEO</a>
+                        <a href="#" class="teg teg-2">ЕГЭ</a>
+                        <a href="#" class="views">1208</a>
                     </div>
                 </div>
             </div>
@@ -135,9 +135,9 @@
                             провести анализ обратной связи от пользователей отработать негативные отзывы 
                     </span>
                     <div class="info-patel-top-bottom">
-                        <div class="teg teg-1">SEO</div>
-                        <div class="teg teg-2">ЕГЭ</div>
-                        <div class="views">1208</div>
+                        <a href="#" class="teg teg-1">SEO</a>
+                        <a href="#" class="teg teg-2">ЕГЭ</a>
+                        <a href="#" class="views">1208</a>
                     </div>
                 </div>
             </div>
@@ -151,23 +151,23 @@
                             провести анализ обратной связи от пользователей отработать негативные отзывы 
                     </span>
                     <div class="info-patel-top-bottom">
-                        <div class="teg teg-1">SEO</div>
-                        <div class="teg teg-2">ЕГЭ</div>
-                        <div class="views">1208</div>
+                        <a href="#" class="teg teg-1">SEO</a>
+                        <a href="#" class="teg teg-2">ЕГЭ</a>
+                        <a href="#" class="views">1208</a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="pagination">
             <ul class="pagination-list">
-                <li class="switch  switch-back switch-pagination"><</li>
-                <li class="page">1</li>
-                <li class="page page-active">2</li>
-                <li class="page">3</li>
-                <li class="page">4</li>
-                <li class="dots">...</li>
-                <li class="page">12</li>
-                <li class="switch switch-forward switch-pagination">></li>
+                <li class="switch  switch-back switch-pagination"><a href="" class="switch-pagination-link"><</a></li>
+                <li class="page"><a href="" class="page-list">1</a></li>
+                <li class="page page-active"><a href="" class="page-active-list">2</a></li>
+                <li class="page"><a href="" class="page-list">3</a></li>
+                <li class="page"><a href="" class="page-list">4</a></li>
+                <li class="dots"><a href="" class="dots-list">...</a></li>
+                <li class="page"><a href="" class="page-list">12</a></li>
+                <li class="switch switch-forward switch-pagination"><a href="" class="switch-pagination-link">></a></li>
             </ul>
         </div>
     </div>
