--- a/smm.html
+++ b/smm.html
@@ -82,7 +82,7 @@
 <section class="why-seo">
     <!-- <img src="images/left-fon.png" class="why-seo-fon"> -->
     <div class="container container-why-seo">
-        <h3 class="why-seo-title">Почему Вашему бизнесу нужен SEO?</h3>
+        <h3 class="why-seo-title">Почему Вашему бизнесу нужен SMM?</h3>
         <span class="why-seo-sub-title">Social Media Marketing - это комплекс инструментов, позволяющий найти и привлечь внимание целевой аудитории. Основная цель SMM повысить лояльность бренда перед вашей аудиторий, что неизменно повысит узнаваемость и принесет дополнительные продажи. Построим стратегию, которая позволит: повысить рост лояльности текущих и потенциальных клиентов сформирование имиджа бренда проинформировать аудиторию провести анализ обратной связи от пользователей отработать негативные отзывы и собрать положительные Для продвижения бренда используем такие площадки, как ВКонтакте, Facebook, Instagram, Одноклассники, LinkedIn, Twitter, YouTube и др. Секрет нашего успеха в индивидуальном подходе</span>
         <div class="why-seo-list">
             <div class="why-seo-item">
@@ -122,14 +122,13 @@
         </div>
     </div>
 </section>
-<section class="dev-stage dev-stage-seo">
+<section class="dev-stage-smm">
     <div class="container container-dev-stage">
         <div class="wrapper-title">
-            <span class="dev-stage-title">Процесс настройки SEO для сайта проходит в несколько этапов</span>
-            <span class="dev-stage-sub-title">Финальный результат должен привлекать покупателя и отражать ключевые преимущества продукта</span>
+            <span class="dev-stage-title">Как мы работаем</span>
         </div>
         <ul class="dev-stage-list dev-stage-list-seo">
-            <li class="dev-stage-items"><span class="number-dev-stage">1</span><p class="dev-stage-text">Технический анализ</p>
+            <li class="dev-stage-items dev-stage-items-smm"><span class="number-dev-stage">1</span><p class="dev-stage-text">Технический анализ</p>
                 <span class="dev-stage-item-text">повысить рост лояльности текущих и потенциальных клиентов
                     сформирование имиджа бренда
                     проинформировать аудиторию
@@ -137,7 +136,7 @@
                     отработать негативные отзывы 
                 </span>
             </li>
-            <li class="dev-stage-items"><span class="number-dev-stage">2</span><p class="dev-stage-text">Анализ юзабилити</p>
+            <li class="dev-stage-items dev-stage-items-smm"><span class="number-dev-stage">2</span><p class="dev-stage-text">Анализ юзабилити</p>
                 <span class="dev-stage-item-text">повысить рост лояльности текущих и потенциальных клиентов
                     сформирование имиджа бренда
                     проинформировать аудиторию
@@ -145,7 +144,7 @@
                     отработать негативные отзывы 
                 </span>
             </li>
-            <li class="dev-stage-items"><span class="number-dev-stage">3</span><p class="dev-stage-text">Внутренняя оптимизация и А\В - тестирование</p>
+            <li class="dev-stage-items dev-stage-items-smm"><span class="number-dev-stage">3</span><p class="dev-stage-text">Внутренняя оптимизация и А\В - тестирование</p>
                 <span class="dev-stage-item-text">повысить рост лояльности текущих и потенциальных клиентов
                     сформирование имиджа бренда
                     проинформировать аудиторию
@@ -153,7 +152,7 @@
                     отработать негативные отзывы 
                 </span>
             </li>
-            <li class="dev-stage-items"><span class="number-dev-stage">4</span><p class="dev-stage-text">Внешняя оптимизация</p>
+            <li class="dev-stage-items dev-stage-items-smm"><span class="number-dev-stage">4</span><p class="dev-stage-text">Внешняя оптимизация</p>
                 <span class="dev-stage-item-text">повысить рост лояльности текущих и потенциальных клиентов
                     сформирование имиджа бренда
                     проинформировать аудиторию
