--- a/branding_services.html
+++ b/branding_services.html
@@ -137,19 +137,21 @@
                     <span class="analysis-title">Комплексный анализ</span>
                     <span class="analysis-sub-title">Ваш торговый знак должен быть актуальным</span>
                     <span class="analysis-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.</span>
-                    </div>
-                <ul class="analysis-list">
-                    <li class="analysis-item"><p class="analysis-item-text">Портрет клиента</p></li>
-                    <li class="analysis-item"><p class="analysis-item-text">Карта репутации</p></li>
-                    <li class="analysis-item"><p class="analysis-item-text">Фокус группа</p></li>
-                    <li class="analysis-item"><p class="analysis-item-text">Систематизируем данные</p></li>
-                </ul>
-                <ul class="analysis-list ">
-                    <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Портрет клиента</p></li>
-                    <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Карта репутации</p></li>
-                    <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Фокус группа</p></li>
-                    <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Систематизируем данные</p></li>
-                </ul>
+                </div>
+                <div class="wrapper-analysis-list">
+                    <ul class="analysis-list">
+                        <li class="analysis-item"><p class="analysis-item-text">Портрет клиента</p></li>
+                        <li class="analysis-item"><p class="analysis-item-text">Карта репутации</p></li>
+                        <li class="analysis-item"><p class="analysis-item-text">Фокус группа</p></li>
+                        <li class="analysis-item"><p class="analysis-item-text">Систематизируем данные</p></li>
+                    </ul>
+                    <ul class="analysis-list ">
+                        <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Портрет клиента</p></li>
+                        <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Карта репутации</p></li>
+                        <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Фокус группа</p></li>
+                        <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Систематизируем данные</p></li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section class="components-branding">
