--- a/contact.html
+++ b/contact.html
@@ -39,16 +39,17 @@
 </header>
 <section class="contact-us">
     <div class="container container-contact-us">
-        <div class="contact-us-text">
-            <div class="wrapper-contact-us">
-                <h3 class="contact-us-title">Контакты</h3>
-                <div class="contacts">
-                    <a href="tel:79780000000" class="footer-phone contacts-phone">+7 978 000 00 00</a>
-                    <a href="mailto:increase@gmail.com" class="footer-email contacts-email">increase@gmail.com</a>
-                    <span class="contacts-street">Симферополь, ул. Пушкина .д 17\2</span>
+        <h3 class="contact-us-title">Контакты</h3>
+        <div class="wrapper-contact-us">
+            <div class="contact-us-text">
+                <div class="wrapper-contact-us">
+                    <div class="contacts">
+                        <a href="tel:79780000000" class="footer-phone contacts-phone">+7 978 000 00 00</a>
+                        <a href="mailto:increase@gmail.com" class="footer-email contacts-email">increase@gmail.com</a>
+                        <span class="contacts-street">Симферополь, ул. Пушкина .д 17\2</span>
+                    </div>
                 </div>
-            </div>
-                <ul class="footer-social-links social-links">
+                <ul class="footer-social-links social-links social-links-contact-us ">
                     <li class="social-links__item">
                         <a href="#" class="social-links__item-link">
                             <span class="sr-only">Вконтакте</span>
@@ -68,15 +69,15 @@
                         </a>
                     </li>
                 </ul>
-            
+            </div>
+            <form class="form-contact-us">
+                <input type="text" name="name" class="contact-us__input form__input" placeholder="Имя">
+                <input type="text" name="phone" class="contact-us__input form__input" placeholder="Телефон">
+                <input type="text" name="email" class="contact-us__input form__input" placeholder="E-mail">
+                <textarea name="message" class="contact-us__textarea form__input" placeholder="Сообщение"></textarea>
+                <button type="bubmit" class="btn contact-us__btn">	Свзаться с нами</button>
+            </form>
         </div>
-        <form class="form-contact-us">
-            <input type="text" name="name" class="contact-us__input form__input" placeholder="Имя">
-            <input type="text" name="phone" class="contact-us__input form__input" placeholder="Телефон">
-            <input type="text" name="email" class="contact-us__input form__input" placeholder="E-mail">
-            <textarea name="message" class="contact-us__textarea form__input" placeholder="Сообщение"></textarea>
-            <button type="bubmit" class="btn contact-us__btn">	Свзаться с нами</button>
-        </form>
     </div>
 </section>
 <section class="price">
