--- a/outside.html
+++ b/outside.html
@@ -47,28 +47,28 @@
                     <h4 class="outside-item-title">SEO</h4>
                     <span class="outside-item-sub-title">Выводим сайт на первые позиции органической выдачи</span>
                 </div>
-                <button class="cost">Подробнее</button>
+                <button class="cost const-outside">Подробнее</button>
             </div>
             <div class="outside-item">
                 <div class="wrapper-outside-item">
                     <h4 class="outside-item-title">SEO</h4>
                     <span class="outside-item-sub-title">Выводим сайт на первые позиции органической выдачи</span>
                 </div>
-                <button class="cost">Подробнее</button>
+                <button class="cost const-outside">Подробнее</button>
             </div>
             <div class="outside-item">
                 <div class="wrapper-outside-item">
                     <h4 class="outside-item-title">SEO</h4>
                     <span class="outside-item-sub-title">Выводим сайт на первые позиции органической выдачи</span>
                 </div>
-                <button class="cost">Подробнее</button>
+                <button class="cost const-outside">Подробнее</button>
             </div>
             <div class="outside-item">
                 <div class="wrapper-outside-item">
                     <h4 class="outside-item-title">SEO</h4>
                     <span class="outside-item-sub-title">Выводим сайт на первые позиции органической выдачи</span>
                 </div>
-                <button class="cost">Подробнее</button>
+                <button class="cost const-outside">Подробнее</button>
             </div>
         </div>
     </div>
