--- a/service-context.html
+++ b/service-context.html
@@ -39,7 +39,7 @@
     </header>
     <section class="service-about service-context-about">
         <div class="container contaner-service-about contaner-service-context-about">
-            <div class="sml-info-service-text">
+            <div class="sml-info-service-text sml-info-service-context-text">
                 <div class="wrapper-sml-info-service">
                     <span class="sml-info-service-title">Контекстная реклама</span>
                     <span class="sml-info-service-slogan sml-info-service-context-slogan">Привлекай нужных посетителей очень быстро</span>
@@ -125,15 +125,15 @@
     </div>
 </section>
 <section class="dev-stage dev-stage-2">
-    <div class="container container-dev-stage">
+    <div class="container container-dev-stage container-dev-stage-contaxt">
         <div class="wrapper-title">
             <span class="dev-stage-title">Процесс настройки и развития контекстной рекламы для сайта проходит в несколько этапов</span>
             <span class="dev-stage-sub-title">Финальный результат должен привлекать покупателя и отражать ключевые преимущества продукта</span>
         </div>
-        <ul class="dev-stage-list dev-stage-context-lost">
-            <li class="dev-stage-items"><span class="number-dev-stage">1</span><p class="dev-stage-text">Анализ и настройка</p></li>
-            <li class="dev-stage-items"><span class="number-dev-stage">2</span><p class="dev-stage-text">Подготовка к запуску</p></li>
-            <li class="dev-stage-items"><span class="number-dev-stage">3</span><p class="dev-stage-text">Запуск и развитие</p></li>
+        <ul class="dev-stage-list dev-stage-context-lost dev-stage-context">
+            <li class="dev-stage-items dev-stage-item-context"><span class="number-dev-stage">1</span><p class="dev-stage-text">Анализ и настройка</p></li>
+            <li class="dev-stage-items dev-stage-item-context"><span class="number-dev-stage">2</span><p class="dev-stage-text">Подготовка к запуску</p></li>
+            <li class="dev-stage-items dev-stage-item-context"><span class="number-dev-stage">3</span><p class="dev-stage-text">Запуск и развитие</p></li>
         </ul>
     </div>
 </section>
