--- a/service-logo.html
+++ b/service-logo.html
@@ -73,7 +73,7 @@
     <img src="./images/our-projects-blot-2.png" class="service-about__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </section>
     <section class="big-info-service">
-        <div class="container container-big-info-service">
+        <div class="container container-big-info-service container-big-info-service-logo ">
             <div class="services-this">
                 <div class="wrapper-service-this">
                     <span class="service-this-text">Логотип - это</span>
@@ -81,7 +81,7 @@
                 </div>
                 <button class="show-cases">Показать наши кейсы</button>
             </div>
-            <img class="info-service-img service-logo__info-service-img" src="images/fon-info-services-2.png">
+            <img class="info-service-img service-logo__info-service-img info-service-logo-img" src="images/fon-info-services-2.png">
             <div class="service-why">
                 <span class="service-why-text">Варианты логотипов:</span>
                 <ul class="service-why-list">
