--- a/service-pack.html
+++ b/service-pack.html
@@ -125,7 +125,7 @@
                 <span class="analysis-sub-title">Мы изучаем целевую аудиторию товара</span>
                 <span class="analysis-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.</span>
                 </div>
-            <ul class="analysis-list">
+            <ul class="analysis-list analysis-list-pack ">
                 <li class="analysis-item"><p class="analysis-item-text">Портрет клиента</p></li>
                 <li class="analysis-item"><p class="analysis-item-text">Карта репутации</p></li>
                 <li class="analysis-item"><p class="analysis-item-text">Фокус группа</p></li>
